crates/toml_edit/tests/fixtures/invalid/key/quoted-unclosed-1.stderr
TOML parse error at line 1, column 9
  |
1 | "key = x
  |         ^
Invalid basic string
